Change background colours to improve contrast errors and removed colour in logo causing contrast issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ h1, h2, h3 {
 }
 
 .green {
-    color: rgb(2, 170, 2);
+    color: green;
 }
 
 .blue {
@@ -67,7 +67,7 @@ li {
 
 /* header */
 header {
-    background-color: rgb(5, 151, 5);
+    background-color: #238901;
     font-family: agbalumo, serif;
     padding: 0 1rem;
     position: fixed;
@@ -115,7 +115,7 @@ nav a {
 
 nav {
     position: absolute;
-    background-color: rgb(5, 151, 5);
+    background-color: #238901;
     width: 100%;
     padding: 0 1rem;
     box-shadow: 0 2px 2px rgb(5, 80, 5);
@@ -155,7 +155,7 @@ main {
 }
 
 #cover-text {
-    background-color: rgba(5, 151, 5, 0.5);
+    background-color: rgba(40, 137, 1, 0.5);
     font-size: 120%;
     position: absolute;
     top: 45px;
@@ -224,7 +224,7 @@ table, td {
 }
 
 thead, tfoot {
-    background-color: rgba(5, 151, 5);
+    background-color: #238901;
     color:#ffffff;
 }
 
@@ -300,7 +300,7 @@ iframe {
 }
 
 .book {
-    border: 5px double rgb(2, 167, 2);
+    border: 5px double #238901;
     margin-bottom: 15px;
     font-style: oblique;
     padding: 2px 5px;
@@ -333,7 +333,7 @@ label {
 #book-button {
     font-size: 1.5rem;
     color: #ffffff;
-    background-color: rgb(5, 151, 5);
+    background-color: #238901;
 }
 
 #book-button:hover {
@@ -356,7 +356,7 @@ label {
 }
 
 #kids-cover-text {
-    background-color: rgba(5, 151, 5, 0.5);
+    background-color: rgba(40, 137, 1, 0.5);
     font-size: 180%;
     position: absolute;
     top: 85px;
@@ -385,7 +385,7 @@ iframe {
 }
 
 #coach-intro {
-    border: 2px solid rgb(2, 167, 2);
+    border: 2px solid #238901;
     margin: 5px 10px;
     padding: 8px;
 }
